--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -15,16 +15,16 @@
    "source": [
     "## Ejercicio 1 \n",
     "\n",
-    "Dos dados se lanzan una vez y se observa el total obtenido. Usa una simulación para encontrar la probabilidad estimada de que la puntuación sea mayor a 7 o un número par. Una simulación es una repetición del mismo experimento multiples veces para observar su comportamiento:\n",
+    "Dos dados se lanzan una vez y se observa el total obtenido. Usa una simulación para encontrar la probabilidad estimada de que la puntuación sea mayor a 7 o un número par. Una simulación es una repetición del mismo experimento múltiples veces para observar su comportamiento:\n",
     "\n",
     "- Ejecuta el experimento 1000 veces (lanza 2 dados 1000 veces, y suma el número de ambos dados).\n",
-    "- Lleva ua cuenta de los números y las veces que la suma fue mayor a 7 o un número par.\n",
+    "- Lleva una cuenta de los números y las veces que la suma fue mayor a 7 o un número par.\n",
     "- Divide el número del paso 2 entre el número de iteraciones(1000)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,7 @@
       "The estimated probability that when rolling the dice in a simulation of 1000 \n",
       "attempts an even number will come out is: 56%\n",
       "The estimated probability that when rolling the dice in a simulation of 1000 \n",
-      "attempts an number higher than 7 will come out is: 30%\n"
+      "attempts a number higher than 7 will come out is: 28%\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
     "print( f'''The estimated probability that when rolling the dice in a simulation of 1000 \n",
     "attempts an even number will come out is: {int(round(probability_function(even_numbers), 2) * 100)}%''')\n",
     "print( f'''The estimated probability that when rolling the dice in a simulation of 1000 \n",
-    "attempts an number higher than 7 will come out is: {int(round(probability_function(numbers_higher_seven), 2) * 100)}%''')\n",
+    "attempts a number higher than 7 will come out is: {int(round(probability_function(numbers_higher_seven), 2) * 100)}%''')\n",
     "\n"
    ]
   },
@@ -78,43 +78,54 @@
     "Una caja contiene 10 bolas blancas, 20 bolas rojas y 30 bolas verdes. Si tomamos 5 bolas de la caja reemplazándolas (tomando una bola, anotando el color y luego regresandola a la caja). Queremos saber la probabilidad de:\n",
     "\n",
     "1. Tomar 3 blancas y 2 rojas.\n",
-    "2. Toas todas del mismo color.\n",
+    "2. Tomas todas del mismo color.\n",
     "\n",
     "Ejecuta el experimento 1000 veces y calcula las probabilidades que mencionadas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "23244d20",
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'c:\\Program Files\\Python312\\python.exe' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: '\"c:/Program Files/Python312/python.exe\" -m pip install ipykernel -U --user --force-reinstall'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of drawing 3 white balls and 2 red balls is: 0.3%\n",
+      "The probability of drawing 5 balls of the same color is: 2.5%\n"
      ]
     }
    ],
    "source": [
-    "ball_box = {}\n",
+    "import random\n",
     "\n",
-    "# Crea la cajas con las bolas\n",
-    "for i in range(60):\n",
-    "    if i < 10:\n",
-    "        ball_box[i] = \"White\"\n",
-    "    elif (i > 9) and (i < 30):\n",
-    "        ball_box[i] = \"Red\"\n",
-    "    else:\n",
-    "        ball_box[i] = \"Green\"\n",
+    "ball_box = ['White']*10 + ['Red']*20 + ['Green']*30\n",
     "\n",
-    "print(ball_box)\n",
-    "            \n",
-    "# TODO"
+    "three_white_two_red = 0\n",
+    "same_color = 0\n",
+    "\n",
+    "for _ in range(1000):\n",
+    "   \n",
+    "    drawn_balls = [random.choice(ball_box) for _ in range(5)]\n",
+    "    \n",
+    "    white_count = drawn_balls.count('White')\n",
+    "    red_count = drawn_balls.count('Red')\n",
+    "    green_count = drawn_balls.count('Green')\n",
+    "    \n",
+    "    if white_count == 3 and red_count == 2:\n",
+    "        three_white_two_red += 1\n",
+    "    \n",
+    "\n",
+    "    if white_count == 5 or red_count == 5 or green_count == 5:\n",
+    "        same_color += 1\n",
+    "\n",
+    "probability_three_white_two_red = three_white_two_red / 1000\n",
+    "probability_same_color = same_color / 1000\n",
+    "\n",
+    "print(f'The probability of drawing 3 white balls and 2 red balls is: {round(probability_three_white_two_red * 100, 2)}%')\n",
+    "print(f'The probability of drawing 5 balls of the same color is: {round(probability_same_color * 100, 2)}%')"
    ]
   }
  ],
