--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -85,47 +85,191 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "23244d20",
+   "execution_count": 43,
+   "id": "029b4dab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of drawing 3 white balls and 2 red balls is: 0.3%\n",
-      "The probability of drawing 5 balls of the same color is: 2.5%\n"
+      "{0: 'White', 1: 'White', 2: 'White', 3: 'White', 4: 'White', 5: 'White', 6: 'White', 7: 'White', 8: 'White', 9: 'White', 10: 'Red', 11: 'Red', 12: 'Red', 13: 'Red', 14: 'Red', 15: 'Red', 16: 'Red', 17: 'Red', 18: 'Red', 19: 'Red', 20: 'Red', 21: 'Red', 22: 'Red', 23: 'Red', 24: 'Red', 25: 'Red', 26: 'Red', 27: 'Red', 28: 'Red', 29: 'Red', 30: 'Green', 31: 'Green', 32: 'Green', 33: 'Green', 34: 'Green', 35: 'Green', 36: 'Green', 37: 'Green', 38: 'Green', 39: 'Green', 40: 'Green', 41: 'Green', 42: 'Green', 43: 'Green', 44: 'Green', 45: 'Green', 46: 'Green', 47: 'Green', 48: 'Green', 49: 'Green', 50: 'Green', 51: 'Green', 52: 'Green', 53: 'Green', 54: 'Green', 55: 'Green', 56: 'Green', 57: 'Green', 58: 'Green', 59: 'Green'}\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
+    "ball_box = {}\n",
     "\n",
-    "ball_box = ['White']*10 + ['Red']*20 + ['Green']*30\n",
+    "# Create the box of balls\n",
+    "for i in range(60):\n",
+    "    if i < 10:\n",
+    "        ball_box[i] = \"White\"\n",
+    "    elif (i > 9) and (i < 30):\n",
+    "        ball_box[i] = \"Red\"\n",
+    "    else:\n",
+    "        ball_box[i] = \"Green\"\n",
     "\n",
-    "three_white_two_red = 0\n",
-    "same_color = 0\n",
+    "print(ball_box)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "eea20380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Red\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
-    "for _ in range(1000):\n",
-    "   \n",
-    "    drawn_balls = [random.choice(ball_box) for _ in range(5)]\n",
-    "    \n",
-    "    white_count = drawn_balls.count('White')\n",
-    "    red_count = drawn_balls.count('Red')\n",
-    "    green_count = drawn_balls.count('Green')\n",
-    "    \n",
-    "    if white_count == 3 and red_count == 2:\n",
-    "        three_white_two_red += 1\n",
-    "    \n",
+    " # Tomar una bola de la caja \n",
+    "def sacar_bola():\n",
+    "    random_number = random.randint(0, 59)\n",
+    "    return ball_box[random_number]\n",
+    "print(sacar_bola())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "476b4122",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Green', 'Green', 'Green', 'Green', 'Red']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Hacer sacar_bola() 5 veces\n",
     "\n",
-    "    if white_count == 5 or red_count == 5 or green_count == 5:\n",
-    "        same_color += 1\n",
+    "def cinco_veces():\n",
+    "    lista_colores = []\n",
+    "    for i in range(5):\n",
+    "        i = sacar_bola()\n",
+    "        lista_colores.append(i)\n",
+    "    return lista_colores\n",
+    "print(cinco_veces())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "13a4be73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hacer sacar_bolas() 1000 veces\n",
     "\n",
-    "probability_three_white_two_red = three_white_two_red / 1000\n",
-    "probability_same_color = same_color / 1000\n",
+    "def mil_veces():\n",
+    "    lista_de_listas_de_colores = []\n",
+    "    for i in range(1000):\n",
+    "        i = cinco_veces()\n",
+    "        lista_de_listas_de_colores.append(i)\n",
+    "    return lista_de_listas_de_colores\n",
     "\n",
-    "print(f'The probability of drawing 3 white balls and 2 red balls is: {round(probability_three_white_two_red * 100, 2)}%')\n",
-    "print(f'The probability of drawing 5 balls of the same color is: {round(probability_same_color * 100, 2)}%')"
+    "simulacion = mil_veces()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "4575b5ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Contar cuantas veces son del mismo color\n",
+    "\n",
+    "def filtrado_de_iguales():\n",
+    "    contador_iguales = 0\n",
+    "  \n",
+    "    for i in simulacion:\n",
+    "        if len(set(i)) == 1:\n",
+    "            if i[0] == 'Green':\n",
+    "                contador_iguales += 1\n",
+    "            elif i[0] == 'White':\n",
+    "                contador_iguales += 1\n",
+    "            elif i[0] == 'Red':\n",
+    "                contador_iguales += 1\n",
+    "\n",
+    "    return contador_iguales\n",
+    "\n",
+    "print(filtrado_de_iguales())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "id": "4d6ba093",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "def filtrado_dos_colores():\n",
+    "    contador_dos_colores = 0\n",
+    "  \n",
+    "    for i in simulacion:\n",
+    "        bolas_blancas = i.count('White')\n",
+    "        bolas_rojas = i.count('Red')\n",
+    "\n",
+    "        if bolas_blancas == 3 and bolas_rojas == 2:\n",
+    "            contador_dos_colores += 1 \n",
+    "\n",
+    "    return contador_dos_colores\n",
+    "\n",
+    "print(filtrado_dos_colores())\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "id": "dc4de1a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of drawing 5 balls of the same color is: 3%\n",
+      "The probability of drawing 3 white balls and 2 red balls is: 0.4%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calcular la probabilidad\n",
+    "\n",
+    "probabilidad_de_mismo_color = filtrado_de_iguales() / 1000\n",
+    "print(f'The probability of drawing 5 balls of the same color is: {int(round(probabilidad_de_mismo_color, 2) * 100)}%')\n",
+    "\n",
+    "probabilidad_dos_colores = filtrado_dos_colores() / 1000\n",
+    "print(f'The probability of drawing 3 white balls and 2 red balls is: {round(probabilidad_dos_colores * 100, 2)}%')"
    ]
   }
  ],
