--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 254,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,10 +32,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The estimated probability that when rolling the dice in a simulation of 1000 \n",
-      "attempts an even number will come out is: 56%\n",
-      "The estimated probability that when rolling the dice in a simulation of 1000 \n",
-      "attempts a number higher than 7 will come out is: 28%\n"
+      "71.0\n"
      ]
     }
    ],
@@ -43,8 +40,7 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "numbers_higher_seven = 0\n",
-    "even_numbers = 0\n",
+    "resultado = 0\n",
     "\n",
     "def dice_game():\n",
     "    return np.random.randint(2, 13, (1000))\n",
@@ -52,20 +48,12 @@
     "dice_numbers = dice_game()\n",
     "\n",
     "for i in dice_numbers:\n",
-    "    if i > 7 and i % 2 == 0:\n",
-    "        numbers_higher_seven += 1\n",
-    "        even_numbers += 1\n",
-    "    elif i % 2 == 0:\n",
-    "        even_numbers += 1\n",
+    "    if i > 7 or i % 2 == 0:\n",
+    "        resultado +=1\n",
     "\n",
     "def probability_function(x):\n",
-    "    return x / 1000\n",
-    "\n",
-    "print( f'''The estimated probability that when rolling the dice in a simulation of 1000 \n",
-    "attempts an even number will come out is: {int(round(probability_function(even_numbers), 2) * 100)}%''')\n",
-    "print( f'''The estimated probability that when rolling the dice in a simulation of 1000 \n",
-    "attempts a number higher than 7 will come out is: {int(round(probability_function(numbers_higher_seven), 2) * 100)}%''')\n",
-    "\n"
+    "     return x / 1000\n",
+    "print((round(probability_function(resultado), 2) * 100))"
    ]
   },
   {
@@ -164,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 187,
    "id": "13a4be73",
    "metadata": {},
    "outputs": [],
@@ -184,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 185,
    "id": "4575b5ef",
    "metadata": {},
    "outputs": [
@@ -204,12 +192,7 @@
     "  \n",
     "    for i in simulacion:\n",
     "        if len(set(i)) == 1:\n",
-    "            if i[0] == 'Green':\n",
-    "                contador_iguales += 1\n",
-    "            elif i[0] == 'White':\n",
-    "                contador_iguales += 1\n",
-    "            elif i[0] == 'Red':\n",
-    "                contador_iguales += 1\n",
+    "            contador_iguales += 1\n",
     "\n",
     "    return contador_iguales\n",
     "\n",
