--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 271,
    "id": "8939d892",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "71.0\n"
+      "The estimated probability that the number that comes out when \n",
+      "rolling two dice is greater than seven or even is: 71%\n"
      ]
     }
    ],
@@ -40,7 +41,7 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "resultado = 0\n",
+    "result = 0\n",
     "\n",
     "def dice_game():\n",
     "    return np.random.randint(2, 13, (1000))\n",
@@ -49,11 +50,12 @@
     "\n",
     "for i in dice_numbers:\n",
     "    if i > 7 or i % 2 == 0:\n",
-    "        resultado +=1\n",
+    "        result +=1\n",
     "\n",
     "def probability_function(x):\n",
     "     return x / 1000\n",
-    "print((round(probability_function(resultado), 2) * 100))"
+    "print(f'''The estimated probability that the number that comes out when \n",
+    "rolling two dice is greater than seven or even is: {int(round(probability_function(result), 2) * 100)}%''')"
    ]
   },
   {
