--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 274,
    "id": "eea20380",
    "metadata": {},
    "outputs": [
@@ -113,22 +113,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Red\n"
+      "Green\n"
      ]
     }
    ],
    "source": [
     "\n",
     " # Tomar una bola de la caja \n",
-    "def sacar_bola():\n",
+    "def take_a_ball():\n",
     "    random_number = random.randint(0, 59)\n",
     "    return ball_box[random_number]\n",
-    "print(sacar_bola())"
+    "print(take_a_ball())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 277,
    "id": "476b4122",
    "metadata": {},
    "outputs": [
@@ -136,45 +136,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Green', 'Green', 'Green', 'Green', 'Red']\n"
+      "['Red', 'White', 'Red', 'Green', 'Red']\n"
      ]
     }
    ],
    "source": [
     "# Hacer sacar_bola() 5 veces\n",
     "\n",
-    "def cinco_veces():\n",
-    "    lista_colores = []\n",
+    "def take_five_balls():\n",
+    "    colors_list = []\n",
     "    for i in range(5):\n",
-    "        i = sacar_bola()\n",
-    "        lista_colores.append(i)\n",
-    "    return lista_colores\n",
-    "print(cinco_veces())"
+    "        i = take_a_ball()\n",
+    "        colors_list.append(i)\n",
+    "    return colors_list\n",
+    "print(take_five_balls())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 281,
    "id": "13a4be73",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Hacer sacar_bolas() 1000 veces\n",
     "\n",
-    "def mil_veces():\n",
-    "    lista_de_listas_de_colores = []\n",
+    "def a_thousand_times():\n",
+    "    list_of_colors_list = []\n",
     "    for i in range(1000):\n",
-    "        i = cinco_veces()\n",
-    "        lista_de_listas_de_colores.append(i)\n",
-    "    return lista_de_listas_de_colores\n",
+    "        i = take_five_balls()\n",
+    "        list_of_colors_list.append(i)\n",
+    "    return list_of_colors_list\n",
     "\n",
-    "simulacion = mil_veces()\n",
+    "simulation = a_thousand_times()\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 282,
    "id": "4575b5ef",
    "metadata": {},
    "outputs": [
@@ -182,28 +182,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "33\n"
+      "31\n"
      ]
     }
    ],
    "source": [
     "# Contar cuantas veces son del mismo color\n",
     "\n",
-    "def filtrado_de_iguales():\n",
-    "    contador_iguales = 0\n",
+    "def filtered_by_equals():\n",
+    "    equals_counter = 0\n",
     "  \n",
-    "    for i in simulacion:\n",
+    "    for i in simulation:\n",
     "        if len(set(i)) == 1:\n",
-    "            contador_iguales += 1\n",
+    "            equals_counter += 1\n",
     "\n",
-    "    return contador_iguales\n",
+    "    return equals_counter\n",
     "\n",
-    "print(filtrado_de_iguales())\n"
+    "print(filtered_by_equals())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 283,
    "id": "4d6ba093",
    "metadata": {},
    "outputs": [
@@ -211,30 +211,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "6\n"
      ]
     }
    ],
    "source": [
-    "def filtrado_dos_colores():\n",
-    "    contador_dos_colores = 0\n",
+    "def filtered_by_colors():\n",
+    "    colors_counter = 0\n",
     "  \n",
-    "    for i in simulacion:\n",
-    "        bolas_blancas = i.count('White')\n",
-    "        bolas_rojas = i.count('Red')\n",
+    "    for i in simulation:\n",
+    "        white_balls = i.count('White')\n",
+    "        red_balls = i.count('Red')\n",
     "\n",
-    "        if bolas_blancas == 3 and bolas_rojas == 2:\n",
-    "            contador_dos_colores += 1 \n",
+    "        if white_balls == 3 and red_balls == 2:\n",
+    "            colors_counter += 1 \n",
     "\n",
-    "    return contador_dos_colores\n",
+    "    return colors_counter\n",
     "\n",
-    "print(filtrado_dos_colores())\n",
+    "print(filtered_by_colors())\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 286,
    "id": "dc4de1a9",
    "metadata": {},
    "outputs": [
@@ -242,19 +242,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The probability of drawing 5 balls of the same color is: 3%\n",
-      "The probability of drawing 3 white balls and 2 red balls is: 0.4%\n"
+      "The estimated probability of drawing 5 balls of the same color is: 3%\n",
+      "The estimated probability of drawing 3 white balls and 2 red balls is: 0.6%\n"
      ]
     }
    ],
    "source": [
     "# Calcular la probabilidad\n",
     "\n",
-    "probabilidad_de_mismo_color = filtrado_de_iguales() / 1000\n",
-    "print(f'The probability of drawing 5 balls of the same color is: {int(round(probabilidad_de_mismo_color, 2) * 100)}%')\n",
+    "probability_of_the_same_color = filtered_by_equals() / 1000\n",
+    "print(f'The estimated probability of drawing 5 balls of the same color is: {int(round(probability_of_the_same_color, 2) * 100)}%')\n",
     "\n",
-    "probabilidad_dos_colores = filtrado_dos_colores() / 1000\n",
-    "print(f'The probability of drawing 3 white balls and 2 red balls is: {round(probabilidad_dos_colores * 100, 2)}%')"
+    "probability_of_3_white_and_2_red = filtered_by_colors() / 1000\n",
+    "print(f'The estimated probability of drawing 3 white balls and 2 red balls is: {round(probability_of_3_white_and_2_red * 100, 2)}%')"
    ]
   }
  ],
